--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="social-container">
 				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
 				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+				<a href="#" class="social"><i class="fab fa-github"></i></a>
 			</div>
 			<span>or use your account</span>
 			<input type="email" placeholder="Email" />
@@ -45,7 +45,7 @@
 			</div>
 			<div class="overlay-panel overlay-right">
 				<h1>Hello, Friend!</h1>
-				<p>Enter your personal details and start journey with us</p>
+				<p>Enter your personal details and get started</p>
 				<button class="ghost" id="signUp">Sign Up</button>
 			</div>
 		</div>
@@ -55,8 +55,7 @@
 <footer>
 	<p>
 		Created with <i class="fa fa-heart"></i> by
-		<a target="_blank" href="https://www.github.com">Aditya Singh</a>
-		- Follow me on instagram
+		<a target="_blank" href="https://www.github.com">Aditya Singh</a>- Follow me on instagram
 		<a target="_blank" href="https://www.instagram.com/aditya_njr">here</a>.
 	</p>
 </footer>
