add script file

--- a/index.html
+++ b/index.html
@@ -59,5 +59,6 @@
 		<a target="_blank" href="https://www.instagram.com/aditya_njr">here</a>.
 	</p>
 </footer>
+<script src="app.js"></script>
 </body>
 </html>
