fontawseome kit added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Sign in/up Form</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+	<script src="https://kit.fontawesome.com/5b23eb7909.js" crossorigin="anonymous"></script>
 <body>
 <div class="container" id="container">
 	<div class="form-container sign-up-container">
@@ -54,7 +54,7 @@
 
 <footer>
 	<p>
-		Created with <i class="fa fa-heart"></i> by
+		Created with <i class="fa fa-heart"></i>  by
 		<a target="_blank" href="https://www.github.com">Aditya Singh</a>- Follow me on instagram
 		<a target="_blank" href="https://www.instagram.com/aditya_njr">here</a>.
 	</p>
