--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 		<form action="#">
 			<h1>Create Account</h1>
 			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
+				<a href="#" class="social"><i class="fab fa-facebook-f red"></i></a>
+				<a href="#" class="social"><i class="fab fa-google-plus-g red"></i></a>
+				<a href="#" class="social"><i class="fab fa-github red"></i></a>
+				<a href="#" class="social"><i class="fab fa-linkedin-in red"></i></a>
 			</div>
 			<span>or use your email for registration</span>
 			<input type="text" placeholder="Name" />
@@ -25,9 +26,10 @@
 		<form action="#">
 			<h1>Sign in</h1>
 			<div class="social-container">
-				<a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-				<a href="#" class="social"><i class="fab fa-google-plus-g"></i></a>
-				<a href="#" class="social"><i class="fab fa-github"></i></a>
+				<a href="#" class="social"><i class="fab fa-facebook-f red"></i></a>
+				<a href="#" class="social"><i class="fab fa-google-plus-g red"></i></a>
+				<a href="#" class="social"><i class="fab fa-github red"></i></a>
+				<a href="#" class="social"><i class="fab fa-linkedin-in red"></i></a>
 			</div>
 			<span>or use your account</span>
 			<input type="email" placeholder="Email" />
